--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.growth">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
-        android:name=".core.CustomApplication"
+        android:name=".core.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,6 +20,8 @@
         <activity android:name=".ui.activity.JniActivity"/>
         <activity android:name=".ui.activity.OpenGLActivity"/>
         <activity android:name=".ui.activity.CurlActivity"/>
+        <activity android:name=".ui.activity.SpinnerActivity"/>
+        <activity android:name=".ui.activity.SmackActivity"/>
     </application>
 
 </manifest>
