--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,23 @@
     <application
         android:name=".core.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".modules.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.JniActivity"/>
-        <activity android:name=".ui.activity.OpenGLActivity"/>
-        <activity android:name=".ui.activity.CurlActivity"/>
-        <activity android:name=".ui.activity.SpinnerActivity"/>
-        <activity android:name=".ui.activity.SmackActivity"/>
+        <activity android:name=".modules.jni.JniActivity"/>
+        <activity android:name=".modules.gl.OpenGLActivity"/>
+        <activity android:name=".modules.curl.CurlActivity"/>
+        <activity android:name=".modules.spinner.SpinnerActivity"/>
+        <activity android:name=".modules.smack.SmackActivity"/>
+        <activity android:name=".modules.event.EventActivity"/>
     </application>
 
 </manifest>
